--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
